--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - VITE_BACKEND_ENDPOINT=https://django/api/files
+      - VITE_BACKEND_ENDPOINT=http://host.docker.internal:8000/api/
       - VITE_API_KEY=lskdjf9834lsdkjfASDF98sdf09sdfSDF0sdfSDF90sdf
 
   django:
@@ -18,7 +18,7 @@ services:
     volumes:
       - ./django:/file_management_service
     ports:
-      - "8001:8000"
+      - "8000:8000"
     environment:
       - GRPC_HOST=grpc
       - GRPC_PORT=50051
