--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - /app/node_modules
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - VITE_BACKEND_ENDPOINT=http://127.0.0.11:8000/api/
+      - VITE_BACKEND_ENDPOINT=http://host.docker.internal:8000/api/
       - VITE_API_KEY=lskdjf9834lsdkjfASDF98sdf09sdfSDF0sdfSDF90sdf
 
   django:
