--- a/react/Dockerfile-prod
+++ b/react/Dockerfile-prod
@@ -14,12 +14,14 @@ COPY . .
 # Build the React app
 RUN npm run build
 
+
 # Use an nginx base image to serve the built React app
 FROM nginx:alpine
 
 # Copy the build files to the nginx directory
 COPY --from=build /app/build /usr/share/nginx/html
-
+# Copy custom Nginx configuration
+COPY nginx.conf /etc/nginx/nginx.conf
 # Expose port 80
 EXPOSE 80
 
