--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -8,11 +8,8 @@ services:
     volumes:
       - ./react:/app
       - /app/node_modules
-
-    environment:
-      - CHOKIDAR_USEPOLLING=true
-      - VITE_BACKEND_ENDPOINT=http://localhost:8000/api/
-      - VITE_API_KEY=lskdjf9834lsdkjfASDF98sdf09sdfSDF0sdfSDF90sdf
+    env_file:
+      - ./react/.env.dev
 
   django:
     build:
