fix issue and deploy prod

--- a/react/.env.dev
+++ b/react/.env.dev
@@ -1,3 +1,4 @@
 CHOKIDAR_USEPOLLING=true
 VITE_BACKEND_ENDPOINT=http://localhost:8000/api/
 VITE_API_KEY=lskdjf9834lsdkjfASDF98sdf09sdfSDF0sdfSDF90sdf
+VITE_REACT_PORT=5173
