--- a/react/nginx.conf
+++ b/react/nginx.conf
@@ -6,13 +6,20 @@ http{
     server {
     listen 80;
     server_name localhost;
+    include mime.types;
 
     root /usr/share/nginx/html;
     index index.html;
 
     location / {
         try_files $uri /index.html;
+        add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
     }
+    # types {
+    #     text/css css;
+    #     application/javascript js;
+    #     application/wasm wasm;
+    # }
 
     # Optionally handle other specific routes or configurations here
 }
