--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,6 +3,8 @@ services:
     build:
       context: ./react
       dockerfile: Dockerfile-dev
+      args:
+        - VITE_REACT_PORT=5173
     ports:
       - "5173:5173"
     volumes:
