--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -3,13 +3,15 @@ services:
     build:
       context: ./react
       dockerfile: Dockerfile-prod
+      args:
+        - VITE_REACT_PORT=80
     ports:
-      - "80:80"
+      - "81:80"
     volumes:
       - ./react:/app
       - /app/node_modules
     env_file:
-      - ./react/.env
+      - ./react/.env.prod
 
   django:
     build:
