--- a/react/.env.prod
+++ b/react/.env.prod
@@ -1,3 +1,3 @@
-CHOKIDAR_USEPOLLING=true
 VITE_BACKEND_ENDPOINT=http://ec2-3-81-236-188.compute-1.amazonaws.com:8000/api/
 VITE_API_KEY=lskdjf9834lsdkjfASDF98sdf09sdfSDF0sdfSDF90sdf
+VITE_REACT_PORT=80
