--- a/react/Dockerfile-prod
+++ b/react/Dockerfile-prod
@@ -1,11 +1,11 @@
 # Use a node base image to build the React app
 FROM node:20.15.0 AS build
-
+ARG VITE_REACT_PORT
+ENV VITE_REACT_PORT=$VITE_REACT_PORT
 # Set working directory
 WORKDIR /app
-
 # Install dependencies
-COPY package*.json ./
+COPY package.json ./
 RUN npm install
 
 # Copy source files
@@ -13,7 +13,6 @@ COPY . .
 
 # Build the React app
 RUN npm run build
-
 
 # Use an nginx base image to serve the built React app
 FROM nginx:alpine
@@ -23,7 +22,7 @@ COPY --from=build /app/build /usr/share/nginx/html
 # Copy custom Nginx configuration
 COPY nginx.conf /etc/nginx/nginx.conf
 # Expose port 80
-EXPOSE 80
+EXPOSE 81
 
 # Start nginx
 CMD ["nginx", "-g", "daemon off;"]
